--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "scripts": {
     "build": "skpm-build",
     "render": "node createPalette.js && skpm-build --run",
+    "render:palette": "node createPalette.js",
+    "render:sketch": "skpm-build --run",
     "postinstall": "npm run build && skpm-link"
   },
   "author": "Rob Hough",
